--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,11 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
-    "check-password-strength": "^2.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "password-validator": "^5.1.1",
     "sequelize": "^6.5.0"
   }
 }
